--- a/#src/pages/index.pug
+++ b/#src/pages/index.pug
@@ -3,7 +3,7 @@ extends _layout
 block main
 	section.hero.section
 		.hero__bg
-			<spline-viewer url="https://prod.spline.design/6V46uIQB2lBcza1a/scene.splinecode"></spline-viewer>
+			<spline-viewer class="spline-viewer" url="https://prod.spline.design/6V46uIQB2lBcza1a/scene.splinecode"></spline-viewer>
 		.container
 			h1.hero__title.h1 Присоединяйся <br> к команде <span class="accent-color">boson.GROUP</span>
 			p.hero__text.body-text Boson Group — это пространство для роста, развития и реализации вашего потенциала. Присоединяйтесь к нам и станьте частью команды профессионалов, создающих будущее цифровых коммуникаций. У нас вы найдете поддержку, вдохновение и возможности для достижения ваших карьерных целей.
@@ -104,7 +104,7 @@ block main
 				button.vacancies-filter.vacancies-filter--active(data-count="10") All
 				button.vacancies-filter(data-count="6") Development
 				button.vacancies-filter(data-count="1") Design
-				button.vacancies-filter(data-count="1") Whiter
+				button.vacancies-filter(data-count="1") Writer
 				button.vacancies-filter(data-count="1") Admin
 				button.vacancies-filter(data-count="1") Sales
 			.vacancies__column
